<resources>
    <!-- Foundation -->
    <string name="app_name">ExarControl</string>
    <string name="Exit">Exit</string>
    <string name="Back">Back</string>
    <string name="loading">Loading&#8230;</string>
    <string name="Refresh">Refresh</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <!-- Main -->
    <string name="Welcome">Welcome!</string>
    <string name="AuthorNotice">This app is UNOFFICIAL\nbut uses the official API</string>
    <string name="APIT">API token</string>
    <string name="ModLater">You can modify that later.</string>
    <string name="Starter">Get started with the app!</string>
    <string name="NeedHelp1">How to get API token:\nhttps://rd.oh64.moe/exagta</string>
    <string name="JustLove">Made with &lt;3 by Oh64</string>
    <string name="Info">App developed by Oh64\nThis app is UNOFFICIAL\nYour version is: </string>
    <string name="TokenDel">Delete the token</string>
    <string name="TokenError">Your token will be deleted forever!\nBye, bye!</string>
    <string name="TokenButton">Confirm and enter a new token</string>
    <string name="InternetError">Please connect to the internet\nto use this app</string>
    <string name="DWY">I\'m sorry, you can\'t\nmanage players for now</string>
    <string name="CPL">Choose a player list:</string>
    <string name="IMPORTANTCPL">(Unable to get the list of online players at the moment)</string>
    <string name="CommandInput">Enter a command</string>
    <string name="error_fetching_credit_pools">Failed to fetch credit pools</string>
    <string name="error_reading_response_body">Error reading response body</string>
    <string name="error_fetching_credit_pools_response">Error fetching credit pools</string>
    <string name="no_credit_pool">There is no Credit Pool</string>
    <string name="error_parsing_credit_pools_data">Error parsing credit pools data</string>
    <string name="credits">Credits: </string>
    <string name="servers">Servers: </string>
    <string name="members">Members: </string>
    <string name="error_fetching_server_info">Failed to fetch server info</string>
    <string name="error_fetching_server_status">Failed to fetch server status</string>
    <string name="error_fetching_motd">Failed to fetch MOTD</string>
    <string name="error_fetching_ram_cpu">Failed to fetch RAM and CPU info</string>
    <string name="error_fetching_logs">Failed to fetch server logs</string>
    <string name="error_uploading_logs">Failed to upload logs</string>
    <string name="action_completed">%1$s completed</string>
    <string name="action_failed">%1$s failed</string>
    <string name="fetching_logs">Fetching logs…</string>
    <string name="uploading_logs">Uploading logs…</string>
    <string name="ram_usage">RAM Usage: %1$s%%</string>
    <string name="server_offline">Server OFFLINE</string>
    <string name="server_ram_cpu">RAM: %1$d GB\nCPU: %2$d Shared Cores</string>
    <string name="Notification">Notification</string>
</resources>