<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/server_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/TokenDel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/TokenDel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#FF0000"
        android:text="@string/TokenDel"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:icon="@android:drawable/ic_menu_delete"
        app:iconTint="#000000"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toTopOf="@+id/Refresh"
        app:layout_constraintEnd_toEndOf="@+id/server_list"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#149514"
        android:text="@string/Refresh"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:icon="@android:drawable/ic_popup_sync"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Info"
        app:layout_constraintEnd_toEndOf="@+id/server_list"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Info"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#212121"
        android:textColor="#FFFFFF"
        android:text="@string/Info"
        android:gravity="center"
        android:layout_marginBottom="0dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
