<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Console"
    android:background="#373737">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#373737"
        android:padding="1dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="5dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:descendantFocusability="beforeDescendants"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_input_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    <TextView
            android:id="@+id/console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:gravity="top|start"
            android:padding="4dp"
            android:background="#373737"
            android:textIsSelectable="true" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/text_input_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/back"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/text_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/CommandInput"
            android:textColor="#FFFFFF"
            android:textColorHint="#CCCCCC"
            android:background="#444444"
            android:padding="8dp"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textColor="#FFFFFF"
            android:backgroundTint="#149514"
            android:padding="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:textColor="#FFFFFF"
        android:backgroundTint="#149514"
        android:textSize="18sp"
        app:icon="?attr/actionModeCloseDrawable"
        android:layout_margin="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
